--- a/css/main.css
+++ b/css/main.css
@@ -16,13 +16,51 @@ body, html {
 .container {
     max-width: 600px;
     width: 100%;
-    height: 600px;
     border: 1px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     gap: 20px;
+    padding: 20px 20px;
+}
+
+.rpg__char {
+    display: flex;
+    gap: 30px;
+    justify-content: space-evenly   ;
+    width: 100%;
+}
+
+.char__info-list {
+    display: flex;
+    flex-direction: column;
+}
+
+.char__controls {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 15px;
+}
+
+.rpg__location {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.location__buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.rpg__event-list {
+    max-width: 400px;
+    height: 200px;
+    width: 100%;
+    border: 1px solid black;
 }
 
 
