--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,21 @@ body, html {
     padding: 0;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.pick__race {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.race-field {
+    display: flex;
+    align-items: center;
+}
+
 .rpg {
     height: 100%;
     display: flex;
@@ -13,11 +28,22 @@ body, html {
     gap: 20px;
 }
 
-.container {
+.rpg__start {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 600px;
+    height: 100%;
+
+}
+
+.rpg__wrapper {
     max-width: 600px;
     width: 100%;
     border: 1px solid black;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -56,11 +82,16 @@ body, html {
     gap: 10px;
 }
 
+.location__ways {
+    display: none;
+}
+
 .rpg__event-list {
     max-width: 400px;
     height: 200px;
     width: 100%;
     border: 1px solid black;
+    overflow: scroll;
 }
 
 
